--- a/Client/package.json
+++ b/Client/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "antd": "^4.0.0",
+    "fusioncharts": "^3.15.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-fusioncharts": "^3.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
   },
