--- a/Client/package.json
+++ b/Client/package.json
@@ -2,8 +2,10 @@
   "name": "clairvoyant-take-home-project",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "antd": "^4.0.0",
+    "axios": "^0.19.2",
     "fusioncharts": "^3.15.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
